<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_homePage"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/menu_Profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>

    <item
        android:id="@+id/menu_Blog"
        android:icon="@drawable/blog"
        android:title="@string/blog"/>
    <item
        android:id="@+id/menu_History"
        android:icon="@drawable/history"
        android:title="@string/history"/>
    <item
        android:id="@+id/menu_Favorite"
        android:icon="@drawable/favorite"
        android:title="@string/favourite" />
    <item
        android:id="@+id/menu_Genre"
        android:icon="@drawable/baseline_article_24"
        android:title="@string/genre" />
    <item
        android:id="@+id/menu_PaymentHistory"
        android:icon="@drawable/baseline_attach_money_24"
        android:title="@string/payment_history" />
    <item
        android:id="@+id/menu_Logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />

</menu>